Bug 59806 - [Regression][i915] Cairo-Dock is now fully transparent
Summary: [Regression][i915] Cairo-Dock is now fully transparent
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-24 13:52 UTC by Matthieu Baerts
Modified: 2013-01-24 17:11 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Matthieu Baerts 2013-01-24 13:52:02 UTC
Hello,

Firstly, thank you for developing these free drivers!

I'm now using the latest version of xf86-video-intel from git (778dba90c - "sna/dri: Don't contribute missed frames to the target_msc") and my bottom dock of Cairo-Dock is now fully transparent.
I didn't have this bug with the latest stable version (2.20.19) and I'm using i915 module.

  $ glxinfo| grep OpenGL
   OpenGL vendor string: Intel Open Source Technology Center
   OpenGL renderer string: Mesa DRI Intel(R) Ironlake Mobile 
   OpenGL version string: 2.1 Mesa 9.0.1

  $ lspci | grep VGA
   00:02.0 VGA compatible controller: Intel Corporation Core Processor Integrated Graphics Controller (rev 12)
   01:00.0 VGA compatible controller: Advanced Micro Devices [AMD] nee ATI M96 [Mobility Radeon HD 4650] (rev ff)
Comment 1 Chris Wilson 2013-01-24 14:03:01 UTC
If you do suspect it is a DDX bug, please do try and bisect it.
Comment 2 Chris Wilson 2013-01-24 15:41:47 UTC
commit d60128c55e8f5f69476d42c20f2fd62ccc0f411e
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Jan 24 15:41:29 2013 +0000

    sna/dri: Compensate clipExtents for drawable offset
    
    The clipExtents is in screen coordinates whereas we just want to confirm
    that the maximum pixel to be copied lies with the DRI2 buffer, which is
    relative to the drawable.
    
    Reported-by: Matthieu Baerts <matttbe@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=59806
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

Sigh, I was testing one thing and completely thought about the testing the other...
Comment 3 Matthieu Baerts 2013-01-24 17:11:17 UTC
(In reply to comment #2)
> commit d60128c55e8f5f69476d42c20f2fd62ccc0f411e

Thank you for this quick fix :)
I confirm that this new commit fixes this bug!

Regards,

Matt


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.